tune-latencies/alerting-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-oes-spin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: alerting-ui
  namespace: oes
spec:
  rules:
  - host: alerting.saas.opsmx.com
    http:
      paths:
      - backend:
          serviceName: oes-prometheus-alertmanager
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - alerting.saas.opsmx.com
    secretName: alerting-ui-authtls
